# Digitales_2

./: .gitignore
Ejemplo juanita/: cntdiv_n.sv  main.sv  shift_led.sv
Lab_1/: deco7seg_hexa.sv  trafficlight.qpf  trafficlight.qsf  trafficlight.qws  trafficlight.sv
Lab_2/: adderunit.sv  controlunit.sv  datapathunit.sv  deco7seg_hexa.sv.bak  ieee754mult.qsf  ieee754mult.qws  multiplierunit.sv  peripheral_deco7seg.sv  peripheral_getoperands.sv  peripherals.sv  top.sv  trafficlight.qsf  trafficlight.qws  trafficlight.sv  trafficlight.sv.bak  trafficlight_nativelink_simulation.rpt
Lab_2/incremental_db/compiled_partitions/: trafficlight.db_info  trafficlight.root_partition.map.cdb  trafficlight.root_partition.map.dpi  trafficlight.root_partition.map.hbdb.cdb  (+3 more)
Lab_2/output_files/: trafficlight.done  trafficlight.flow.rpt  trafficlight.map.rpt  trafficlight.map.smsg  trafficlight.map.summary
Lab_3/: Fibonacci.s  Fibonnacci.s  p2_Sanchez_Arbelaez_W16-19.txt  program_sa.s
Lab_4/: funs_sa.s  program_sa.s  program_v2_sa.s  sort_func.s
Lab_5/05-ARM-SingleCycle-mod/: alu.sv  condlogic.sv  controller.sv  datapath.sv  decoder.sv  imem.sv  shift.sv  top.qsf
Lab_5/05-ARM-SingleCycle-students/: alu.sv  arm.sv  condlogic.sv  controller.sv  datapath.sv  decoder.sv  displays.sv  dmem.sv  imem.sv  peripheral_deco7seg.sv  peripheral_pulse.sv  shift.sv  testbench_peripherals.sv  top.qsf  top.qws  top.sv
Laboratorio_1/: firstExample.qpf  firstExample.qsf  firstExample.qws  tbmain.sv
Proyecto final/: CMakeLists.txt  adc.s  gpio.s  main.c  main.h  main.s  misc.s  pwm.s  uart.s
(+9 files in other folders)
